--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
     "method-override": "^3.0.0",
-    "mongoose": "^5.7.12"
+    "mongoose": "^5.7.12",
+    "multer": "^1.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
