--- a/package.json
+++ b/package.json
@@ -1,47 +1,30 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
-  "private": true,
+  "name": "diving",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "cd backend && nodemon server",
+    "react": "cd frontend && npm start",
+    "start": "concurrently - kill-others \"nodemon server\" \"npm react\""
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SEI-diving/SEI-diving-team.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/SEI-diving/SEI-diving-team/issues"
+  },
+  "homepage": "https://github.com/SEI-diving/SEI-diving-team#readme",
   "dependencies": {
-    "axios": "^0.19.0",
-    "bcrypt": "^3.0.7",
-    "bootstrap": "^4.3.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "jwt-decode": "^2.2.0",
     "method-override": "^3.0.0",
-    "mongoose": "^5.7.12",
-    "react": "^16.12.0",
-    "react-bootstrap": "^1.0.0-beta.16",
-    "react-date-picker": "^7.8.2",
-    "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.88.1",
-    "sweetalert2": "^9.4.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "mongoose": "^5.7.13"
   }
 }
