--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "method-override": "^3.0.0",
-    "mongoose": "^5.7.13"
+    "mongoose": "^5.7.13",
+    "multer": "^1.4.2"
   }
 }
